# application-dash

./: .gitignore  CLAUDE.md  docker-compose.yml  plan.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  db_schema.md  main.py
backend/app/api/: applications.py  router.py
backend/app/auth/: gmail_client.py  google.py  worklog.md
backend/app/llm/: client.py
backend/app/sync/: gmail_sync.py
backend/tests/: conftest.py  test_constraints.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  Card.jsx  Column.jsx  KanbanBoard.jsx  api.js  styles.css
