[project]
name = "application-dash-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings>=2.4.0",
    "anthropic>=0.34.0",
]

[tool.uv]
package = false

[tool.pyright]
venvPath = "."
venv = ".venv"
